[project]
name = "poorly_optimised_inference_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<=2.2",
    "accelerate>=1.10.1",
    "isort>=6.1.0",
    "packaging>=25.0",
    "ruff>=0.13.3",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
