[project]
name = "poorly_optimised_inference_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<=2.2",
    "accelerate>=1.10.1",
    "isort>=6.1.0",
    "packaging>=25.0",
    "ruff>=0.13.3",
    "safetensors>=0.6.2",
    "torch==2.9.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ninja>=1.13.0",
    "pyqt6>=6.10.0",
    "torchao>=0.14.1",
    "fbgemm-gpu-genai>=1.4.2",
]
